Fixed video overflowing over text on the first paragraph

--- a/awa/style.css
+++ b/awa/style.css
@@ -42,8 +42,10 @@ time, mark, audio, video {
 
 .video video {
     object-fit: cover;
-    min-width: 100%;
-    min-height: 100%;
+    min-width:100vw;
+    min-height:100vh;
+    max-width: 100vw;
+    max-height: 100vh;
 }
 
 /*Header and small paragraph on top of Video*/
@@ -110,7 +112,7 @@ time, mark, audio, video {
 }
 
 .mid-sec .text-card p {
-    padding:55px;
+    padding:55px; /*MÅ ENDRES!*/
     font-weight: 400;
     max-width:50vw;
     font-size: 23px;
